    this function will not do anything.
  + Added unmount() function that takes a QUrl as argument (the path)
    and unmounts the corresponding share. The mounted share must already 
    be known to Smb4K otherwise this function will do nothing.
  + Added find() function. It takes a QUrl and a boolean and returns the
    mounted share, if it could be found.

Smb4K 1.0.1 (2012-03-11):
- Fixed potential crash in Smb4KWalletManager::init().
- Fixed KDEInit complaining when Smb4K is started from a desktop icon
  (closes SF ticket #23).
- Fixed periodic scanning.

Smb4K 1.0.0 (2012-02-01):
- KDE SC 4.4.0 and Qt 4.7.0 or later are required.
- We now use Utf8 throughout the whole application (closes #14674 and
  #17535).
- Unified the function names of the core classes that set and return the
  workgroup name, host name, and share name.
- Made the core container classes use QUrls internally where appropriate.
- Added ability to install core header files by passing the new 
  -DINSTALL_HEADER_FILES=true configuration option to cmake. By default,
  no header files will be installed.
- Revised Smb4KSettings class:
  + Removed the program entries from this class. Each core class that needs
    an external program searches for itself.
  + Added entries for handling notifications.
  + Removed all entries related to the old mounting/unmounting implementation.
- Revised Smb4KAuthInfo class:
  + Removed old constructor.
  + Added two new constructors.
  + Added type enumeration and function.
  + Added setUNC() and unc() functions.
  + Renamed user() and setUser() functions login() and setLogin().
  + Removed the setHomesUser() function. Use setLogin() instead.
  + Removed setHomesUsers() and homesUsers() functions.
  + setShare() now automatically uses Smb4KShare::homeUNC() to set the UNC,
    if you pass a homes share.
  + Added equals() function.
  + Added "==" operator.
  + Added setIP() and ip() functions.
  + Renamed setDefaultAuthInfo() to useDefaultAuthInfo().