@@ -30,11 +30,11 @@
 #include <config.h>
 #endif
 
+// application specific includes
+#include "core/smb4kshare.h"
+
 // Qt includes
 #include <QListWidgetItem>
-
-// application specific includes
-#include <core/smb4kshare.h>
 
 // forward declarations
 class Smb4KSharesIconView;
@@ -70,7 +70,7 @@ class Smb4KSharesIconViewItem : public QListWidgetItem
      * 
      * @returns the encapsulated Smb4KShare item.
      */
-    Smb4KShare *shareItem() { return &m_share; }
+    Smb4KShare *shareItem() { return m_share; }
 
     /**
      * This function tells the item to show the mount point instead of the
@@ -92,7 +92,7 @@ class Smb4KSharesIconViewItem : public QListWidgetItem
     /**
      * The Smb4KShare item
      */
-    Smb4KShare m_share;
+    Smb4KShare *m_share;
     
     /**
      * Show the mountpoint
